Add new figures

--- a/capitulos/2-criptografia.tex
+++ b/capitulos/2-criptografia.tex
@@ -180,7 +180,7 @@ Cada registrador contém \textit{bits} importantes para a criptografia e suas po
 		R2 & 10 & 20,21 \\ \hline
 		R3 & 10 & 7,20,21,22 \\ \hline	
 	\end{tabular}
-	\caption{Bits importantes do algoritmo A5/1}
+	\caption{\textit{Bits} importantes do algoritmo A5/1}
 	\label{important-bits}
 \end{table}
 
