--- a/capitulos/3-prng.tex
+++ b/capitulos/3-prng.tex
@@ -217,7 +217,7 @@ Sua segurança é provida pelo problema do logaritmo discreto. Esse gerador util
 
 Realizar a exponenciação logarítmica é um problema fácil de resolver, porém o inverso, o logaritmo discreto, é uma operação comprovadamente difícil.
 
-\subsection{Comparação do Blum Blum Shub E Blum Micali}
+\subsection{Comparação do Blum Blum Shub e Blum Micali}
 
 No trabalho de Josefin Agerblad e  Martin Andersen em \textit{Provably Secure Pseudo-Random Generators}, foi realizada uma comparação dos dois geradores de números pseudo aleatórios, que são comprovadamente seguros, nos quesitos de aplicação, velocidade e segurança.
 
